# StudyNest

./: .gitignore  README.md  RELEASE-NOTES.md  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.json  webpack.config.js
crane-studynest/: BUILD.md  Cargo.toml  INTEGRATION.md  README.md
crane-studynest/crane/: Cargo.toml  README.md
crane-studynest/crane-core/: Cargo.toml
crane-studynest/crane-core/src/models/: mod.rs
crane-studynest/crane/src/: lib.rs
crane-studynest/crane/src/audio/: asr.rs  mod.rs  tts.rs
crane-studynest/crane/src/chat/: client.rs  mod.rs  types.rs
crane-studynest/crane/src/common/: config.rs  error.rs  mod.rs
crane-studynest/crane/src/demos/: moonshine_asr.rs
crane-studynest/crane/src/demos/example/: main.rs
crane-studynest/crane/src/examples/: asr_example.rs  chat_example.rs
crane-studynest/crane/src/llm/: client.rs  mod.rs  types.rs
crane-studynest/crane/src/multimodal/: mod.rs  vision_language.rs
crane-studynest/crane/src/vision/: image_analysis.rs  mod.rs  ocr.rs
crane-studynest/example/: Cargo.toml  README.md
crane-studynest/example/src/: asr_simple.rs  chat_simple.rs  chat_streaming.rs  vision_simple.rs
crane-studynest/src/: chat.rs  device.rs  error.rs  lib.rs  ocr.rs  service.rs  stt.rs
electron/: craneModelManager.ts  craneService.ts  database.ts  main.ts  modelManager.ts  preload.ts  sql.js.d.ts
public/: index.html
scripts/: build-rust-dev.js  build-rust.js
src/: App.tsx  index.css
src/components/: index.ts
src/components/AuthorModal/: AuthorModal.css  AuthorModal.tsx  index.ts
src/hooks/: index.ts  useChat.ts  useTasks.ts  useTheme.ts
src/screens/: index.ts
src/screens/Chat/: Chat.css  (+1 more)
src/styles/: README.md  tokens.css
src/types/: chat.ts  electron.d.ts  index.ts  task.ts
src/utils/: llm.ts
(+41 files in other folders)
