[package]
name = "crane-studynest"
version = "0.1.0"
edition = "2021"
description = "StudyNest - Chat, OCR, and Speech-to-Text inference using Crane"

[dependencies]
crane-core = { path = "./crane-core" }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokenizers = "0.21.1"
hound = "3.5.1"

# PDF/Document parsing
pdf-extract = { version = "0.7", optional = true }
docx-rs = { version = "0.4", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { version = "0.8.4", features = ["accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8.4" }

[features]
default = []
cuda = ["crane-core/cuda"]
cudnn = ["crane-core/cudnn"]
flash-attn = ["crane-core/flash-attn"]
mkl = ["crane-core/mkl"]
onnx = ["crane-core/onnx"]
pdf = ["dep:pdf-extract"]
docx = ["dep:docx-rs"]
full = ["onnx", "pdf", "docx"]

[[bin]]
name = "studynest-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "chat-service"
path = "src/bin/chat_service.rs"
